логин admin пароль admin

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,5 @@ spring.jpa.show-sql=true
 
 #HTTP hidden methods
 spring.mvc.hiddenmethod.filter.enabled=true
+logging.level.org.springframework=debug
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
