JSON works well

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,13 @@ server.servlet.context-path=/
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.jpa.properties.hibernate.show-sql=true
+
+spring.mvc.static-path-pattern=/static/**
+
 
 #HTTP hidden methods
-spring.mvc.hiddenmethod.filter.enabled=true
+
 logging.level.org.springframework=debug
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
